tool/src/js/snapshots/diplomat_tool__js__types__tests__option_types@ffi.rst.snap
---
source: tool/src/js/types.rs
expression: out_docs.get(out).unwrap()
---
``ffi``
=======

.. js:class:: MyOpaqueStruct

.. js:class:: MyStruct

    .. js:attribute:: a

