tool/src/js/snapshots/diplomat_tool__js__types__tests__writeable_out@index.rst.snap
---
source: tool/src/js/types.rs
expression: out_docs.get(out).unwrap()
---
Documentation
=============

.. toctree::
   :maxdepth: 3
   :caption: Modules:

   ffi

Indices and tables
==================

* :ref:`genindex`
* :ref:`search`

